# xab

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  TODO  bad_test.sh  meson.build  meson_options.txt
.github/: FUNDING.yml
docs/: README.md
docs/IPC/: README.md
res/shaders/: fragment.glsl  framebuffer_fragment.glsl  framebuffer_vertex.glsl  meson.build  mouse_distance_thingy.glsl  shader_grabber.sh  vertex.glsl  wallpaper_fragment.glsl  wallpaper_fragment_yuv420p.glsl  wallpaper_vertex.glsl
src/: ansii_colors.h  arg_parser.c  arg_parser.h  atom.c  atom.h  bce_files.h  camera.c  camera.h  context.c  context.h  egl_stuff.c  egl_stuff.h  egl_test.c  egl_test.h  ffmpeg_reader.c  framebuffer.c  framebuffer.h  ipc.c  ipc.h  ipc_spec.h  ipc_utils.h  length_string.h  logger.c  logger.h  logging.h  main.c  meson.build  module.c  module.h  monitor.c  monitor.h  mouse.c  mouse.h  mpv_reader.c  pch.h  screen.h  setbg.c  setbg.h  shader.c  shader.h  (+21 more)
src/Xserver/: atom.c  atom.h  meson.build  monitor.c  monitor.h  mouse.c  mouse.h  setbg.c  setbg.h  x_data.c  x_data.h
src/ffmpeg_reader/: decoder.c  decoder.h  ffmpeg_reader.c  hw_accel_dec.c  meson.build  packet_queue.c  packet_queue.h  picture_queue.c  picture_queue.h
src/modules/: dummy_module.c  meson.build  module_contract_spec.h  module_contract_types.h  module_contract_version.h  mouse_module.c
src/pch/: pch.h
src/render/: camera.c  egl_stuff.c  egl_stuff.h  framebuffer.c  framebuffer.h  image.c  image.h  meson.build  shader.c  shader.h  shader_cache.c  shader_cache.h  texture.c  texture.h  vertex.h  window.c  window.h
src/video/: mpv_reader.c  video_reader_interface.h
src/video/ffmpeg_reader/: decoder.c  decoder.h  ffmpeg_reader.c  hw_accel_dec.c  hw_accel_dec.h  meson.build  packet_queue.c  picture_queue.c
src/video/ffmpeg_reader/hwaccel/: hwaccels_apis.h  hwaccelslist.h.in  hwdec.c  hwdec.h  meson.build  vaapi.c  vdpau.c  vdpau_functions.macro_abuse  vdpau_vtable.c  vdpau_vtable.h
subprojects/: bce.wrap  epoxy-updated.wrap  hashmap.c.wrap  pluginator.wrap  tracy.wrap
subprojects/packagefiles/: CHANGES
subprojects/packagefiles/bce-1.3/: meson.build
subprojects/packagefiles/epoxy-updated/: meson_options.txt
subprojects/packagefiles/hashmap.c/: meson.build
subprojects/packagefiles/hashmap.c-0.8.1/: meson.build
subprojects/packagefiles/tracy-0.11.2/: meson.build
subprojects/packagefiles/tracy-0.12.2/: meson.build
subprojects/packagefiles/tracy-0.13.0/: meson.build
subprojects/packagefiles/tracy-0.13.1/: meson.build
tests/: gen_bad_test.py  meson.build  meson_error_codes.h
tests/arg_parser/: basic_test.c  empty_test.c  full_args_test.c  meson.build
tests/ffmpeg_reader/: meson.build
tests/ffmpeg_reader/packet_queue/: basic_test.c  meson.build  multi_packet_put_get_test.c  put_get_test.c
tests/ffmpeg_reader/packet_queue/basic_test/: meson.build  test.c
tests/ffmpeg_reader/packet_queue/multi_packet_put_get_test/: meson.build  test.c
tests/ffmpeg_reader/packet_queue/put_get_test/: meson.build  test.c
