option(
  'video_reader',
  type: 'combo',
  # todo: vlc
  choices: ['mpv', 'xab_custom'],
  value: 'mpv',
  description: 'Which video library to use',
)

option(
  'log',
  type: 'combo',
  # todo: warn
  choices: ['trace', 'verbose', 'debug', 'info', 'warn', 'error', 'fatal', 'auto'],
  value: 'auto', # auto is by compile mode, so on release mode there will be no debug logs, but on debug mode, there will be debug loggs
  description: 'Log level',
)

option(
  'static_build',
  type: 'boolean',
  value: false,
)
