option(
  'video_reader',
  type: 'combo',
  # todo: vlc
  choices: ['mpv', 'ffmpeg'],
  value: 'mpv',
  description: 'Which video library to use',
)

option(
  'multimonitor',
  type: 'feature',
  value: 'auto',
  description: 'Enable support for multi-monitor support',
)

option(
  'log',
  type: 'combo',
  choices: ['trace', 'verbose', 'debug', 'info', 'warn', 'error', 'fatal', 'auto'],
  value: 'auto', # auto is by compile mode, so on release mode there will be no debug logs, but on debug mode, there will be debug loggs
  description: 'Log level',
)

option(
  'enable_ansii_log',
  type: 'boolean',
  value: true,
  description: 'Enable ANSII terminal colors for logging',
)

option(
  'disable_bce',
  type: 'boolean',
  value: false,
  description: 'Disable embedding files (shaders) into the xab binary (BCE)',
)
