option(
  'video_reader',
  type: 'combo',
  # todo: vlc
  choices: ['mpv', 'ffmpeg'],
  value: 'mpv',
  description: 'Which video library to use',
)

option(
  'module_sys',
  type: 'feature',
  value: 'auto',
  description: 'Enable module system',
)

option(
  'moduledir',
  type: 'string',
  value: '/usr/share/xab/',
  description: 'Where the built in modules of xab exist',
)

option(
  'multimonitor',
  type: 'feature',
  value: 'auto',
  description: 'Enable support for multi-monitor support',
)

option(
  'log',
  type: 'combo',
  choices: ['trace', 'verbose', 'debug', 'info', 'warn', 'error', 'fatal', 'auto'],
  value: 'auto', # auto is by compile mode, so on release mode there will be no debug logs, but on debug mode, there will be debug loggs
  description: 'Log level',
)

option(
  'tracy_enable',
  type: 'boolean',
  value: false,
  description: 'Enable profiling',
)

option(
  'opengl_debug_callback',
  type: 'feature',
  value: 'auto',
  description: 'Enable OpenGL debug callback',
)

option(
  'ansii_log',
  type: 'boolean',
  value: true,
  description: 'Enable ANSII terminal colors for logging',
)

option(
  'nobce',
  type: 'boolean',
  value: false,
  description: 'Disable embedding files (shaders) into the xab binary (BCE)',
)

option(
  'nopch',
  type: 'boolean',
  value: false,
  description: 'Disable pch',
)

option(
  'tests',
  type: 'boolean',
  value: false,
  description: 'Enable unit tests',
)
