# list source files
src_files += files(
  'arg_parser.c',
  'atom.c',
  'camera.c',
  'context.c',
  'egl_stuff.c',
  'framebuffer.c',
  'logger.c',
  'monitor.c',
  'mouse.c',
  'setbg.c',
  'shader.c',
  'shader_cache.c',
  'utils.c',
  'wallpaper.c',
  'xab.c',
)


# configure the file
configure_file(input:'version.h.in', output:  'version.h', configuration: version_conf)
