subdir('basic_test')
test('ffmpeg_reader-packet_queue-basic_test', basic_test_exe, args: [])
subdir('put_get_test')
test('ffmpeg_reader-packet_queue-put_get_test', put_get_test, args: [])
subdir('multi_packet_put_get_test')
test(
  'ffmpeg_reader-packet_queue-multi_packet_put_get_test',
  multi_packet_put_get_test,
  args: [],
)
